--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/ManSino96/Lab3#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "4.17.1",
     "jquery": "^3.5.0"
   }
 }
