--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/ManSino96/Lab3#readme",
   "dependencies": {
+    "alert": "^4.1.1",
     "body-parser": "^1.19.0",
     "express": "4.17.1",
-    "jquery": "^3.5.0"
+    "jquery": "^3.5.0",
+    "node-fetch": "^2.6.0"
   }
 }
