--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "alert": "^4.1.1",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "express": "4.17.1",
     "jquery": "^3.5.0",
     "node-fetch": "^2.6.0"
